--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     }
   },
   "dependencies": {
+    "@material-ui/core": "^3.0.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
